@@ -1,7 +1,6 @@
-; $Id: DSOUND.DEF,v 1.3 2000-03-13 12:47:44 sandervl Exp $
+; $Id: DSOUND.DEF,v 1.4 2001-03-06 21:44:40 mike Exp $
 
 LIBRARY DSOUND INITINSTANCE TERMINSTANCE
-PROTMODE
 DATA MULTIPLE NONSHARED READWRITE LOADONCALL
 CODE LOADONCALL
 EXPORTS
